Bug 1194027, add a flag to select elements to indicate if the parent process has the popup open, r=mrbkap